tailwind docs link

--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -127,9 +127,7 @@ module.exports = {
 };
 ```
 
-:::tip TIP
-You can also include and style React component directly in the `.mdx` files by including those files in the `content` value, such as `content: ['./src/**/*.tsx', './docs/**/*.mdx']`.
-:::
+> You can also include and style React component directly in the `.mdx` files by including those files in the `content` value, such as `content: ['./src/**/*.tsx', './docs/**/*.mdx']`.
 
 4. Include the Tailwind directives in your CSS styles file from [Custom Styles](#custom-styles):
 
@@ -138,6 +136,8 @@ You can also include and style React component directly in the `.mdx` files by i
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 ```
+
+> For most up to date configuration, please refer to the official [Tailwind CSS documentation](https://tailwindcss.com/docs/installation/using-postcss).
 
 ## Custom Layout Structure
 
