docs: update the doc of logoText

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -116,6 +116,21 @@ export default defineConfig({
 });
 ```
 
+## logoText
+
+- Type: `string`
+- Default: `""`
+
+Site logo Text. This text will be used as the logo text in the upper left corner of the navbar. For example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  logoText: 'rspress',
+});
+```
+
 ## outDir
 
 - Type: `string`
