--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -116,6 +116,21 @@ export default defineConfig({
 });
 ```
 
+## logoText
+
+- Type: `string`
+- Default: `""`
+
+站点 logo 文字。这个文字将用作导航栏左上角的 logo 文字。例如：
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  logoText: 'rspress',
+});
+```
+
 ## outDir
 
 - Type: `string`
