test(e2e): add case for api-docgen plugin

--- a/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
@@ -30,12 +30,12 @@ export default defineConfig({
 
 Then you can use API component to inject api documentation to your mdx file:
 
-```md
+```mdx
 ## API
 
 This is API Table
 
-<API moduleName="button"></API>
+<API moduleName="button" />
 ```
 
 ## Config
