--- a/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
@@ -30,12 +30,12 @@ export default defineConfig({
 
 然后你可以在 MDX 中使用 API 组件将 API 内容注入到文档中：
 
-```md
+```mdx
 ## API
 
 这是 API 表格
 
-<API moduleName="button"></API>
+<API moduleName="button" />
 ```
 
 ## 配置
