--- a/e2e/fixtures/i18n/doc/en/guide/basic/quick-start.mdx
+++ b/e2e/fixtures/i18n/doc/en/guide/basic/quick-start.mdx
@@ -1,5 +1,5 @@
 # Quick Start
 
-[click by absolute path](/guide/install) to go to install
+[click by absolute path](/guide/basic/install) to go to install
 
 [click for relative path](./install) to go to install
