--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -580,7 +580,7 @@ export default defineConfig({
 - Type: `'auto' | 'never'`
 - Default: `'auto'`
 
-Whether to redirect to the closest locale when the user visits the site, the default is `auto`, which means that the user will be redirected on the first visit. If you set it to `never`, the user will not be redirected. For example:
+Whether to redirect to the locale closest to `window.navigator.language` when the user visits the site, the default is `auto`, which means that the user will be redirected on the first visit. If you set it to `never`, the user will not be redirected. For example:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
