--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -564,7 +564,7 @@ export default defineConfig({
 - Type: `'auto' | 'never'`
 - Default: `'auto'`
 
-是否在访问网站时重定向到最接近 `window.navigator.language` 的语言，默认为 `auto` 表示首次访问时区将重定向，`never` 表示不重定向。比如:
+是否在访问网站时重定向到最接近 `window.navigator.language` 的语言，默认为 `auto` 表示首次访问时将重定向，`never` 表示不重定向。比如:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
