--- a/packages/document/docs/zh/plugin/official-plugins/rss.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/rss.mdx
@@ -21,7 +21,7 @@ import { pluginRss } from '@rspress/plugin-rss';
 export default defineConfig({
   plugins: [
     pluginRss({
-      // 您的文档站点的 url
+      // 你的文档站点的 url
       siteUrl: 'https://example.com',
       // ...更多配置请见下文
     })
@@ -62,7 +62,7 @@ published_at: 2024-01-10 08:00:00
 
 ### 输出多个 RSS 文件
 
-通常情况下，您会有输出多个 RSS 文件的需要，比如按语言区分、按类目区分。
+通常情况下，你会有输出多个 RSS 文件的需要，比如按语言区分、按类目区分。
 
 可以为 `feed` 传一组 RSS 配置来实现。比如
 
@@ -89,7 +89,7 @@ pluginRss({
 
 默认情况下，该插件会在被选择纳入 RSS 的页面中插入一个 `<link rel="alternative">` 标签，链接到 RSS 文件的 URL。RSS 阅读器能够自动识别到 RSS URL。
 
-如果您想在没被纳入 RSS 的页面（比如首页）中也插入这个标签，可以在文档中添加 `link-rss` 这个 frontmatter，取值为 feed id。比如
+如果你想在没被纳入 RSS 的页面（比如首页）中也插入这个标签，可以在文档中添加 `link-rss` 这个 frontmatter，取值为 feed id。比如
 
 ```markdown
 ---
@@ -194,7 +194,7 @@ RSS 的 ID，在多个 RSS 配置中唯一。同时也是该 RSS 文件的默认
 
 该插件内置有一个生成逻辑，会充分利用文档的 frontmatter 和页面数据，比如 RSS 中的 `content` 会优先取 frontmatter 中的 `summary`，再尝试取文章内容。
 
-您可以传入一个函数来修改内置逻辑生成的数据，该数据会作为第一个参数传给您传入的这个函数。比如下方配置可以截断 RSS 中的文章内容：
+你可以传入一个函数来修改内置逻辑生成的数据，该数据会作为第一个参数传给你传入的这个函数。比如下方配置可以截断 RSS 中的文章内容：
 
 ```ts
 const item: FeedChannel['item'] = (item) => ({...item, content: item.content.slice(0, 1000)});
