docs: add route.include hint

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -307,12 +307,18 @@ import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   route: {
-    include: ['other-dir/**/*'],
+    include: ['other-dir/**/*.{md,mdx}'],
   },
 });
 ```
 
-> Note: The strings in the array support glob patterns.
+> Note: The strings in the array support glob patterns, the glob expression should be based on the `root` directory of the document, with the corresponding extensions suffix.
+
+:::note
+
+We recommend using [addPages hook](plugin/system/plugin-api.html#addpages) in a custom Rspress plugin to add some additional files to the route, so that the page route and file path/content can be specified more flexibly and reasonably.
+
+:::
 
 ### route.exclude
 
@@ -331,7 +337,7 @@ export default defineConfig({
 });
 ```
 
-> Note: The strings in the array support glob patterns.
+> Note: The strings in the array support glob patterns, the glob expression should be based on the `root` directory of the document.
 
 ### route.extensions
 
