docs: improve community plugins

--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -17,3 +17,8 @@
 社区插件包括:
 
 - [rspress-plugin-translate](../community-plugins/translate)：集成 LLM 进行文档翻译的插件。
+- [rspress-plugin-font-open-sans](https://github.com/rspack-contrib/rspress-plugin-font-open-sans): 使用 Open Sans 作为 Rspress 网站中的默认字体。
+
+你可以在 [awesome-rspack - Rspress Plugins](https://github.com/web-infra-dev/awesome-rspack?tab=readme-ov-file#rspress-plugins) 中查看社区提供的 Rspress 插件。
+
+也可以在 npm 上搜索 [rspress-plugin](https://www.npmjs.com/search?q=rspress-plugin&ranking=popularity) 关键词来发现更多 Rspress 插件。
