--- a/packages/document/docs/en/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/overview.mdx
@@ -17,3 +17,8 @@ Official plugins include:
 Community plugins include:
 
 - [rspress-plugin-translate](../community-plugins/translate): A plugin that integrates LLM for document translation.
+- [rspress-plugin-font-open-sans](https://github.com/rspack-contrib/rspress-plugin-font-open-sans): Use Open Sans as the default font in your Rspress website.
+
+You can check out the Rspress plugins provided by the community at [awesome-rspack - Rspress Plugins](https://github.com/web-infra-dev/awesome-rspack?tab=readme-ov-file#rspress-plugins).
+
+You can also discover more Rspress plugins on npm by searching for the keyword [rspress-plugin](https://www.npmjs.com/search?q=rspress-plugin&ranking=popularity).
