feat(plugin-rss): RSS Plugin (#851)

--- a/packages/document/docs/en/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/overview.mdx
@@ -11,6 +11,7 @@ Official plugins include:
 - [@rspress/plugin-preview](./preview): Support preview of code blocks in Markdown/MDX.
 - [@rspress/plugin-playground](./playground): Provide a real-time playground to preview the code blocks in Markdown/MDX files.
 - [@rspress/plugin-shiki](./shiki): Integrates [Shiki](https://github.com/shikijs/shiki) for code syntax highlighting.
+- [@rspress/plugin-rss](./rss)：Generate RSS files with [feed](https://github.com/jpmonette/feed) for the document site.
 
 ## Community Plugins
 
