--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -11,6 +11,7 @@
 - [@rspress/plugin-preview](./preview)：支持代码块中的组件预览。
 - [@rspress/plugin-playground](./playground)：支持代码块中的组件预览，并提供实时 Playground。
 - [@rspress/plugin-shiki](./shiki)：集成 [Shiki](https://github.com/shikijs/shiki) 来进行代码高亮的插件。
+- [@rspress/plugin-rss](./rss)：使用 [feed](https://github.com/jpmonette/feed) 为 Rspress 站点生成 RSS 文件。
 
 ## 社区插件
 
