--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -57,6 +57,8 @@ export interface Hero {
   image?: {
     src: string;
     alt: string;
+    srcset?: string | string[];
+    sizes?: string | string[];
   };
   actions: {
     text: string;
