--- a/packages/document/docs/en/fragments/internal-components.mdx
+++ b/packages/document/docs/en/fragments/internal-components.mdx
@@ -145,7 +145,10 @@ export interface OverviewProps {
   content?: React.ReactNode;
   // data
   groups?: Group[];
+  // default title
   defaultGroupTitle?: string;
+  // headers displayed in the overview page of the file
+  overviewHeaders?: number[];
 }
 ```
 
