--- a/packages/document/docs/zh/fragments/internal-components.mdx
+++ b/packages/document/docs/zh/fragments/internal-components.mdx
@@ -148,6 +148,8 @@ export interface OverviewProps {
   groups?: Group[];
   // 默认标题
   defaultGroupTitle?: string;
+  // 在预览页中展示的标题级别
+  overviewHeaders?: number[];
 }
 ```
 
