fix: i18n custom link

--- a/e2e/fixtures/i18n/doc/en/guide/_meta.json
+++ b/e2e/fixtures/i18n/doc/en/guide/_meta.json
@@ -10,5 +10,10 @@
   {
     "type": "section-header",
     "label": "growth"
+  },
+  {
+    "type": "custom-link",
+    "label": "My Link",
+    "link": "/guide/basic/install"
   }
 ]
