feat: Support `srcset` and `sizes` for homepage image (#904)

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -57,6 +57,12 @@ export interface Hero {
   image?: {
     src: string;
     alt: string;
+    /**
+     * `srcset` and `sizes` are attributes of `<img>` tag. Please refer to https://mdn.io/srcset for the usage.
+     * When the value is an array, rspress will join array members with commas.
+     **/
+    srcset?: string | string[];
+    sizes?: string | string[];
   };
   actions: {
     text: string;
