docs(plugins): add @rspress/plugin-api-docgen

--- a/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
@@ -1,8 +1,10 @@
 # @rspress/plugin-api-docgen
 
-The plugin is used to generate api documentation automatically, powered by [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) and [documentation](https://github.com/documentationjs/documentation).
+The plugin is used to generate api document description automatically, powered by [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) and [documentation](https://github.com/documentationjs/documentation).
 
 ## Install
+
+import { PackageManagerTabs } from '@theme';
 
 <PackageManagerTabs command="add @rspress/plugin-api-docgen -D" />
 
