--- a/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
@@ -1,8 +1,10 @@
 # @rspress/plugin-api-docgen
 
-用于自动生成 API 文档，支持 [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) 和 [documentation](https://github.com/documentationjs/documentation)。
+用于自动生成 API 文档描述，支持 [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) 和 [documentation](https://github.com/documentationjs/documentation)。
 
 ## 安装
+
+import { PackageManagerTabs } from '@theme';
 
 <PackageManagerTabs command="add @rspress/plugin-api-docgen -D" />
 
