--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -8,6 +8,7 @@
 - [@rspress/plugin-last-updated](./last-updated)：支持显示最后更新时间。
 - [@rspress/plugin-container-syntax](./container-syntax)：支持在 Markdown/MDX 中使用 `:::` container 语法。
 - [@rspress/plugin-typedoc](./typedoc)：[TypeDoc](https://github.com/TypeStrong/typedoc) 集成插件，用于自动生成 TS 模块的 API 文档。
+- [@rspress/plugin-api-docgen](./api-docgen): [react-docgen-typescript](https://github.com/styleguidist/react-docgen-typescript) 和 [documentation](https://github.com/documentationjs/documentation) 的集成插件, 用于自动生成 API 的文档描述。
 - [@rspress/plugin-preview](./preview)：支持代码块中的组件预览。
 - [@rspress/plugin-playground](./playground)：支持代码块中的组件预览，并提供实时 Playground。
 - [@rspress/plugin-shiki](./shiki)：集成 [Shiki](https://github.com/shikijs/shiki) 来进行代码高亮的插件。
