feat: support config overviewHeaders in frontmatter in overview page

--- a/packages/document/docs/en/guide/default-theme/overview-page.mdx
+++ b/packages/document/docs/en/guide/default-theme/overview-page.mdx
@@ -62,7 +62,7 @@ At the same time, the file `api/theme/_meta.json` has the following content:
 
 In the above configuration, the final preview page will generate a group called `Theme`, which contains the h1, h2 titles of two articles: `component.md(x)` and `utils.md(x)`. Of course, you can also refer to the config of the `Theme` group to add more groups.
 
-If you want to control the headers displayed in the overview page, you can configure it through `overviewHeaders` config in `_meta.json`, which defaults to `[2]`. If it's a single file, you can also configure FrontMatter with `overviewHeaders: [2]`.
+If you want to control the headers displayed in the overview page, you can configure it through `overviewHeaders` config in `_meta.json`, which defaults to `[2]` and you can also configure FrontMatter with `overviewHeaders: [2]` in exact file.
 
 If you want to generate a sub-preview page under `theme`, there are two ways:
 
