--- a/packages/document/docs/zh/guide/default-theme/overview-page.mdx
+++ b/packages/document/docs/zh/guide/default-theme/overview-page.mdx
@@ -62,7 +62,7 @@ overview: true
 
 在如上的配置中，最后预览页会生成一个 `Theme` 的分组，这个分组里面包含 `component.md(x)` 和 `utils.md(x)` 两篇文章的 h1、h2 标题。当然，你也可以参考 `Theme` 分组的配置，添加更多的分组。
 
-如果要控制在预览页中展示的标题级别，可以通过 `_meta.json` 中的 `overviewHeaders` 配置，默认为 `[2]`。如果针对单个文件，也可以配置 `overviewHeaders: [2]` 的 FrontMatter。
+如果要控制在预览页中展示的标题级别，可以通过 `_meta.json` 中的 `overviewHeaders` 配置，默认为 `[2]`，也可以在对应的文件中配置 `overviewHeaders: [2]` 的 FrontMatter。
 
 如果要在 `theme` 下同样生成一个子预览页，有以下两种方式：
 
