feat: support code transform in preview plugin

--- a/e2e/fixtures/plugin/doc/components/guide.mdx
+++ b/e2e/fixtures/plugin/doc/components/guide.mdx
@@ -13,3 +13,10 @@ export default function HelloWorld() {
 ```
 
 <code src="./component.jsx" />
+
+```json
+{
+  "type": "div",
+  "children": "Render from JSON"
+}
+```
