chore: split test case with custom-plugin and plugin-preview

--- a/e2e/fixtures/custom-plugin/doc/index.mdx
+++ b/e2e/fixtures/custom-plugin/doc/index.mdx
@@ -1,7 +1,7 @@
-# Hello World
+# Guide
 
 ```jsx
 export default function HelloWorld() {
-  return <div>Hello World</div>;
+  return <div>Hello</div>;
 }
 ```
