--- a/e2e/fixtures/plugin-preview/doc/index.mdx
+++ b/e2e/fixtures/plugin-preview/doc/index.mdx
@@ -2,13 +2,7 @@
 
 ```jsx
 export default function HelloWorld() {
-  return <div>Hello</div>;
-}
-```
-
-```jsx
-export default function HelloWorld() {
-  return <div>World</div>;
+  return <div>Hello World Internal</div>;
 }
 ```
 
