--- a/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/api-docgen.mdx
@@ -169,9 +169,14 @@ Returns **[string][1]** The greeting message.
 
 ```ts
 type ParseToolOptions = {
-  'react-docgen-typescript'?: ParserOptions;
+  'react-docgen-typescript'?: ParserOptions & {
+    tsconfigPath?: string;
+    compilerOptions?: ts.CompilerOptions;
+  };
   documentation?: DocumentationArgs;
 };
 ```
 
 Please refer to [ParserOptions](https://github.com/styleguidist/react-docgen-typescript/blob/b7ea0a235efb7c78a1158ca12d864de2bc2ee30e/src/parser.ts#L84-L95) and [DocumentationArgs](https://github.com/documentationjs/documentation/blob/master/docs/NODE_API.md#parameters-1) to learn about available options.
+
+If the parser is `react-docgen-typescript`, the `withDefaultConfig` method is used by default to create a parser instance. If `tsconfigPath` or `compilerOptions` is configured, the `withCompilerOptions` and `withCustomConfig` methods are used to create the parser instance respectively. See [Custom Parsers](https://github.com/styleguidist/react-docgen-typescript/blob/b7ea0a235efb7c78a1158ca12d864de2bc2ee30e/README.md#usage) for details.
