✨ feat(enhance-type-script-types-and-type-guards-in-link-content-component): Refactor the deconstruction in LinkContent to handle TypeScript type errors when mode is 'link' and content is used for href, adding type guards for better type inference and safety.

--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -334,7 +334,7 @@ export default defineConfig({
 - 当`link`模式时，点击 icon 即可跳转链接。
 - 当`text`模式时，鼠标移到 icon 上会显示弹框，弹框内容是输入的文本。
 - 当`img`模式时，鼠标移到 icon 上会显示弹框，弹框内容是指定的图片，需要注意的是，图片需要放在`public`目录下。
-- 当`dom`模式时，可以直接在 content 字段中传入需要渲染的 HTML 内容。
+- 当`dom`模式时，可以直接在 content 字段中传入需要渲染的 ReactNode 内容。
 
 相关链接支持以下几种图片，通过 icon 属性来选择：
 
