--- a/e2e/fixtures/tabs-component/doc/index.mdx
+++ b/e2e/fixtures/tabs-component/doc/index.mdx
@@ -13,4 +13,9 @@ import { Tabs, Tab } from 'rspress/theme';
 <Tabs tabContainerClassName="tabs-b">
   <Tab label="label2">content2</Tab>
   <Tab label="label3">content3</Tab>
+  <Tab label="label4">content4</Tab>
 </Tabs>
+
+## Tab C
+
+<Tabs tabContainerClassName="tabs-c"></Tabs>
