docs: search.versioned zh doc

--- a/packages/document/docs/en/guide/default-theme/multi-version.mdx
+++ b/packages/document/docs/en/guide/default-theme/multi-version.mdx
@@ -56,9 +56,9 @@ export default () => {
 };
 ```
 
-## Limit search to Current Version only
+## Limit Search to Current Version Only
 
-You can configure search to only search through the current version's documents.
+You can configure `search.versioned` to only search through the current version's documents.
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
