--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -208,7 +208,9 @@ export default defineConfig({
 
 ## search
 
-- Type: `{ searchHooks: string }`
+- Type: `{ searchHooks: string; versioned: boolean; }`
+
+### searchHooks
 
 你可以通过 `searchHooks` 参数来增加搜索运行时钩子逻辑，比如：
 
@@ -224,6 +226,20 @@ export default defineConfig({
 ```
 
 关于具体的钩子逻辑，你可以阅读 [自定义搜索功能](/zh/guide/advanced/custom-search)。
+
+### versioned
+
+如果你配置了 `multiVersion`，可以使用 `versioned` 参数为文档的每个版本创建单独的搜索索引。开启该选项后，搜索将仅会查询当前所选版本对应的索引。
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  search: {
+    versioned: true,
+  },
+});
+```
 
 ## globalUIComponents
 
