📝 docs(config): Fix incorrect document automatic titleSuffix

--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -54,7 +54,7 @@ export interface Hero {
   name: string;
   text: string;
   tagline: string;
-  titleSuffix: - Rspack-based Static Site Generator
+  titleSuffix?: string;
   image?: {
     src: string;
     alt: string;
