docs:(frontmatter) Add ''escape to string for titleSuffix field

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -83,7 +83,7 @@ hero:
   name: Rspress
   text: A documentation solution
   tagline: A modern documentation development technology stack
-  titleSuffix: - Rspack-based Static Site Generator
+  titleSuffix: '- Rspack-based Static Site Generator'
   actions:
     - theme: brand
       text: Introduction
