--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -69,6 +69,7 @@ export interface Hero {
     link: string;
     theme: 'brand' | 'alt';
   }[];
+  titleSuffix?: string;
 }
 ```
 
@@ -82,6 +83,7 @@ hero:
   name: Rspress
   text: A documentation solution
   tagline: A modern documentation development technology stack
+  titleSuffix: '- Rspack-based Static Site Generator'
   actions:
     - theme: brand
       text: Introduction
