--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -54,6 +54,7 @@ export interface Hero {
   name: string;
   text: string;
   tagline: string;
+  titleSuffix?: string;
   image?: {
     src: string;
     alt: string;
@@ -82,6 +83,7 @@ hero:
   name: Rspress
   text: 文档工程解决方案
   tagline: 现代化文档开发技术栈
+  titleSuffix: '- 基于 Rspack 的静态站点生成器'
   actions:
     - theme: brand
       text: 介绍
