--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -62,6 +62,10 @@ const Layout = () => (
     beforeDoc={<div>beforeDoc</div>}
     /* Doc page end */
     afterDoc={<div>afterDoc</div>}
+    /* Doc content front */
+    beforeDoc={<div>beforeDoc</div>}
+    /* Doc content end */
+    afterDoc={<div>afterDoc</div>}
     /* Before the nav bar */
     beforeNav={<div>beforeNav</div>}
     /* Before the title of the nav bar in the upper left corner */
