--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -63,9 +63,9 @@ const Layout = () => (
     /* 正文页最后面 */
     afterDoc={<div>afterDoc</div>}
     /* 文档内容前面 */
-    beforeDoc={<div>beforeDoc</div>}
+    beforeDocContent={<div>beforeDocContent</div>}
     /* 文档内容后面 */
-    afterDoc={<div>afterDoc</div>}
+    afterDocContent={<div>afterDocContent</div>}
     /* 导航栏之前 */
     beforeNav={<div>beforeNav</div>}
     /* 左上角导航栏标题之前 */
