--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -63,9 +63,9 @@ const Layout = () => (
     /* Doc page end */
     afterDoc={<div>afterDoc</div>}
     /* Doc content front */
-    beforeDoc={<div>beforeDoc</div>}
+    beforeDocContent={<div>beforeDocContent</div>}
     /* Doc content end */
-    afterDoc={<div>afterDoc</div>}
+    afterDocContent={<div>afterDocContent</div>}
     /* Before the nav bar */
     beforeNav={<div>beforeNav</div>}
     /* Before the title of the nav bar in the upper left corner */
