--- a/packages/document/docs/zh/fragments/internal-components.mdx
+++ b/packages/document/docs/zh/fragments/internal-components.mdx
@@ -31,7 +31,7 @@ interface BadgeProps {
 
 ## Helmet
 
-一般用于在文档中设置自定义 head 内容(底层使用 `react-helmet-async`)。使用方法如下：
+一般用于在文档中设置自定义 head 内容（基于 [react-helmet-async](https://www.npmjs.com/package/react-helmet-async)）。使用方法如下：
 
 ```tsx title="index.tsx"
 // 以下为一个自定义组件，你可以将其引入到文档中
@@ -40,7 +40,7 @@ import { Helmet } from 'rspress/runtime';
 function App() {
   return (
     <Helmet>
-      <meta property="og:description"  value="Out-of-box Rspack build tools">
+      <meta property="og:description" value="Out-of-box Rspack build tools" />
     </Helmet>
   );
 }
@@ -53,7 +53,7 @@ Home 页面 Feature 组件，查看[本站的效果](/zh/)
 ```tsx
 import { HomeFeature } from 'rspress/theme';
 
-export interface Feature {
+interface Feature {
   title: string;
   details: string;
   icon: string;
@@ -73,7 +73,7 @@ Home 页面 Hero 组件
 ```tsx
 import { HomeHero } from 'rspress/theme';
 
-export interface Hero {
+interface Hero {
   name: string;
   text: string;
   tagline: string;
@@ -141,7 +141,7 @@ interface Group {
   items: GroupItem[];
 }
 
-export interface OverviewProps {
+interface OverviewProps {
   // 预览部分上方的内容
   content?: React.ReactNode;
   // 预览数据
