--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -43,6 +43,26 @@ import PageType from '@zh/fragments/page-type';
 
 <PageType />
 
+## titleSuffix
+
+- Type: `string`
+
+设置页面标题的后缀。未设置 `titleSuffix` 时，默认使用站点的 [title](/api/config/config-basic#title) 作为后缀。
+
+```yaml
+---
+titleSuffix: '基于 Rspack 的静态站点生成器'
+---
+```
+
+标题与后缀之间默认使用 `-` 作为分隔符，你也可以使用 `|` 进行分隔：
+
+```yaml
+---
+titleSuffix: '| 基于 Rspack 的静态站点生成器'
+---
+```
+
 ## hero
 
 - Type: `Object`
@@ -54,7 +74,6 @@ interface Hero {
   name: string;
   text: string;
   tagline: string;
-  titleSuffix?: string;
   image?: {
     src: string;
     alt: string;
@@ -83,7 +102,6 @@ hero:
   name: Rspress
   text: 文档工程解决方案
   tagline: 现代化文档开发技术栈
-  titleSuffix: '- 基于 Rspack 的静态站点生成器'
   actions:
     - theme: brand
       text: 介绍
