fix: incorrect default site title

--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -42,7 +42,7 @@ export default defineConfig({
 ## title
 
 - Type: `string`
-- Default: `"Island"`
+- Default: `"Rspress"`
 
 站点标题。这个参数将被用作 HTML 页面的标题。例如：
 
