--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -42,7 +42,7 @@ export default defineConfig({
 ## title
 
 - Type: `string`
-- Default: `"Island"`
+- Default: `"Rspress"`
 
 Site title. This parameter will be used as the title of the HTML page. For example:
 
