--- a/packages/document/docs/zh/guide/basic/deploy.mdx
+++ b/packages/document/docs/zh/guide/basic/deploy.mdx
@@ -4,7 +4,7 @@
 
 - 项目生产环境构建和预览；
 - 静态资源前缀配置；
-- 项目基路径配置；
+- 项目基础路径配置；
 - 选择部署平台进行部署。
 
 ## 项目生产环境构建和预览
@@ -52,7 +52,7 @@ export default defineConfig({
 <script src="https://cdn.com/static/js/app.123.js"></script>
 ```
 
-## 项目基路径配置
+## 项目基础路径配置
 
 在部署的时候，我们可能需要将项目部署到一个子路径下，比如，如果你计划将你的站点部署到 `https://foo.github.io/bar/`，那么你应该将 `base` 参数设置为 `"/bar/"`：
 
