fix: incorrect default site title (#1069)

--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -29,7 +29,7 @@ rspress build docs
 - Type: `string`
 - Default: `/`
 
-部署基路径。比如，如果你计划将你的站点部署到 `https://foo.github.io/bar/`，那么你应该将 `base` 设置为 `"/bar/"`：
+部署基础路径。比如，如果你计划将你的站点部署到 `https://foo.github.io/bar/`，那么你应该将 `base` 设置为 `"/bar/"`：
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
@@ -42,7 +42,7 @@ export default defineConfig({
 ## title
 
 - Type: `string`
-- Default: `"Island"`
+- Default: `"Rspress"`
 
 站点标题。这个参数将被用作 HTML 页面的标题。例如：
 
