--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -220,7 +220,7 @@ const DEFAULT_HIGHLIGHT_LANGUAGES = [
 ];
 ```
 
-已支持自动导入高亮的语言，Rspress 默认做了一些语言别名。
+Rspress 支持自动导入高亮的语言，并默认做了一些语言别名。
 
 - 默认基于 [Prism.js](https://prismjs.com/) 实现，你也可以通过 [@rspress/plugin-shiki](/plugin/official-plugins/shiki) 切换到 Shiki。
 - 默认配置别名的语言包括 `js`、`jsx`、`ts`、`tsx`、`xml`、`md`、`mdx`。
