docs: config-build

--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -220,7 +220,7 @@ const DEFAULT_HIGHLIGHT_LANGUAGES = [
 ];
 ```
 
-Automatic import of highlighted languages is supported, and Rspress has made some language aliases by default.
+Rspress supports automatic import of highlighted languages and makes some language aliases by default.
 
 - By default, it is implemented based on [Prism.js](https://prismjs.com/). You can also switch to Shiki through [@rspress/plugin-shiki](/plugin/official-plugins/shiki).
 - The default configuration alias languages include `js`, `jsx`, `ts`, `tsx`, `xml`, `md`, `mdx`.
