test(chore): supplementary test cases

--- a/packages/core/tests/prismLanguages/index.mdx
+++ b/packages/core/tests/prismLanguages/index.mdx
@@ -13,3 +13,9 @@ console.log('Hello, world!');
 ```javascript
 console.log('Hello, world!');
 ```
+
+# 内置组件
+
+import InternalComponents from './extend'
+
+<InternalComponents />
