fix: sort for prism runtime module export to pass test

--- a/packages/core/tests/prismLanguages/index.mdx
+++ b/packages/core/tests/prismLanguages/index.mdx
@@ -14,6 +14,15 @@ console.log('Hello, world!');
 console.log('Hello, world!');
 ```
 
+```oc
+int main(int argc, const char * argv[]) {
+    @autoreleasepool {
+        NSLog(@"Hello, Objective-C!");
+    }
+    return 0;
+}
+```
+
 # 内置组件
 
 import InternalComponents from './extend'
