feat: support inject context via meta.json and frontmatter when generate sidebar

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -245,3 +245,9 @@ Or
 overviewHeaders: [2, 3]
 ---
 ```
+
+## context
+
+- Type: `string`
+
+After configuration, the `data-context` attribute will be added to the DOM node when the sidebar is generated, and the value is the configured value.
