--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -245,3 +245,9 @@ overviewHeaders: []
 overviewHeaders: [2, 3]
 ---
 ```
+
+## context
+
+- Type: `string`
+
+配置后，在生成侧边栏时会在所在的 DOM 节点添加 `data-context` 属性，值为配置的值。
