--- a/packages/document/docs/en/plugin/official-plugins/client-redirects.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/client-redirects.mdx
@@ -6,6 +6,27 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 Used for client redirects.
 
+::: warning NOTE
+
+For this plugin to work, you need to set the fallback related configuration to the `404.html` page in the build artifacts in the relevant deployment configuration.
+
+For example:
+
+```js title="nginx"
+location / {
+  error_page 404 /404.html;
+}
+```
+
+```toml title="netlify.toml"
+[[redirects]]
+from = "/*"
+to = "/404.html"
+status = 404
+```
+
+:::
+
 ## Installation
 
 <PackageManagerTabs command="add @rspress/plugin-client-redirects -D" />
