docs: not use container

--- a/packages/document/docs/en/plugin/official-plugins/client-redirects.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/client-redirects.mdx
@@ -6,9 +6,9 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 Used for client redirects.
 
-::: warning NOTE
+## Precautions
 
-For this plugin to work, you need to set the fallback related configuration to the `404.html` page in the build artifacts in the relevant deployment configuration.
+For this plugin to work correctly, you need to set the fallback related configuration to the `404.html` page in the build artifacts in the relevant deployment configuration.
 
 For example:
 
@@ -24,8 +24,6 @@ from = "/*"
 to = "/404.html"
 status = 404
 ```
-
-:::
 
 ## Installation
 
