--- a/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
@@ -6,9 +6,9 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 用于客户端重定向。
 
-::: warning 注意
+## 注意
 
-该插件的工作需要在相关部署配置中将 fallback 相关的配置设置为产物中的 `404.html` 页面。
+该插件的正常工作需要在相关部署配置中将 fallback 相关的配置设置为产物中的 `404.html` 页面。
 
 例如：
 
@@ -24,8 +24,6 @@ from = "/*"
 to = "/404.html"
 status = 404
 ```
-
-:::
 
 ## 安装
 
