--- a/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/client-redirects.mdx
@@ -8,7 +8,7 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 ## 注意
 
-该插件的正常工作需要在相关部署配置中将 fallback 相关的配置设置为产物中的 `404.html` 页面。
+为了使该插件正常工作，你需要在服务器的部署配置中，将 fallback 路径设置为 Rspress 生成的 `404.html` 页面。
 
 例如：
 
